# elastic-matryoshka-embeddings

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
configs/: config.yaml
data/: README.md
results/: contriever_mrl.json  latency_benchmark.json
scripts/: benchmark.py  build_index.py  evaluate.py  load_redis.py  plot_pareto.py  plot_tradeoff.py  tokenize_data.py  train.py
src/api/: app.py  pipeline.py
src/data/: dataset.py  load_data.py  prepare_dataset.py
src/evaluation/: evaluator.py
src/models/: embedding_model.py  loss.py
src/training/: trainer.py
src/utils/: config.py  logger.py
